--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <label for="genres">Choose a genre</label>
 
     <select name="genres" id="genres">
-        <!-- <option value=""></option>
         <option value=""></option>
         <option value=""></option>
-        <option value=""></option> -->
+        <option value=""></option>
+        <option value=""></option>
     </select> 
 
 
