got and displayed movie data based on genre

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
     </select> 
 
     <button class='searchButton'>Search</button>
+
+    <ul class="galleryList">
+        <li></li>
+    </ul>
+
     <script src="./script.js"></script>
 </body>
 
