Adding a collapsible menu. If we do end up using it.

--- a/index.html
+++ b/index.html
@@ -19,18 +19,14 @@
         <div class="wrapper">
                 
             <section class="movieMenu">
-                <!-- <label for="genres">Choose a genre</label> -->
-                <!-- <select name="genres" id="genres">
-                    
-                </select>  -->
+
                 <div class="genreBox">
                     <h2>Select a Genre</h2>
-                    <button class='hide'>Hide</button>
+                    <button class='show'>Show</button>
                     <ul class="genreList">
-                        <!-- <button class='genre'>Horror</button> -->
+                        <!-- Add genres from API -->
                     </ul>
                 </div>
-
 
                 <button class='searchButton'>Search</button>
             </section>
@@ -42,6 +38,9 @@
             </section>
         </div>
     </main>
+    <footer>
+        <p>Created at Juno College &copy 2021</p>
+    </footer>
     <script src="./script.js"></script>
 </body>
 
