--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>What Movie to Watch</title>
+    <!-- font family --> 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400&family=Poppins:wght@400;700&display=swap" rel="stylesheet"> 
+
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 
@@ -32,15 +37,15 @@
                         <h2>Release Date</h2>
                         <button class='show'>Show</button>
                         <ul class="yearList">
-                            <li class="yearItem" value=1949>Before 1950</li>
-                            <li class="yearItem" value=1950>1950s</li>
-                            <li class="yearItem" value=1960>1960s</li>
-                            <li class="yearItem" value=1970>1970s</li>
-                            <li class="yearItem" value=1980>1980s</li>
-                            <li class="yearItem" value=1990>1990s</li>
-                            <li class="yearItem" value=2000>2000s</li>
-                            <li class="yearItem" value=2010>2010s</li>
-                            <li class="yearItem" value=2020>2020s</li>
+                            <li><button class="yearItem" value=1949>Before 1950</button></li>
+                            <li><button class="yearItem" value=1950>1950s</button></li>
+                            <li><button class="yearItem" value=1960>1960s</button></li>
+                            <li><button class="yearItem" value=1970>1970s</button></li>
+                            <li><button class="yearItem" value=1980>1980s</button></li>
+                            <li><button class="yearItem" value=1990>1990s</button></li>
+                            <li><button class="yearItem" value=2000>2000s</button></li>
+                            <li><button class="yearItem" value=2010>2010s</button></li>
+                            <li><button class="yearItem" value=2020>2020s</button></li>
                         </ul>
                     </div>
                     <div class="searchButtonBox">
@@ -57,7 +62,14 @@
         </div>
     </main>
     <footer>
-        <p>Created at Juno College &copy 2021</p>
+        <div class="footerContainer">
+            <div>
+                <p>Created by <a href="https://github.com/ZeynabManafova" target="_blank">Zeynab Manafova</a> and <a href="https://github.com/scwchen" target="_blank">Steven Chen at</a> <a href="https://junocollege.com/" target="_blank">Juno College</a> 2021</p>
+            </div>
+            <div>
+                <p>Powered by <a href="https://developers.themoviedb.org/3/" target="_blank">TMDB API</a></p>        
+            </div>
+        </div>
     </footer>
     <script src="./script.js"></script>
 </body>
