--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- font family --> 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&Montserrat:wght@100;400&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/69d6599dec.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./styles/style.css">
 </head>
@@ -19,6 +19,7 @@
         <header>
             <div class="wrapper">
                 <h1>Cineplus</h1>
+                <h2>What are you watching tonight?</h2>
             </div>
         </header> <!-- end of header -->
         <main>
@@ -52,9 +53,6 @@
                             </ul>
                         </ul>
                     </div>
-
-                    <!-- <i class="fas fa-angle-double-up"></i> -->
-                    
 
                     <h3 class="show">Advanced Settings
                         <i class="fas fa-angle-double-down"></i>
